Use new Collection API methods
Using the new methods there will be less and more readable code.

Signed-off-by: Wouter Born <github@maindrain.net>