@@ -12,11 +12,8 @@
  */
 package org.openhab.core.automation.internal.module.handler;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Dictionary;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Map;
 import java.util.Set;
@@ -66,10 +63,9 @@ public class GenericEventTriggerHandler extends BaseTriggerModuleHandler impleme
         this.source = (String) module.getConfiguration().get(CFG_EVENT_SOURCE);
         this.topic = (String) module.getConfiguration().get(CFG_EVENT_TOPIC);
         if (module.getConfiguration().get(CFG_EVENT_TYPES) != null) {
-            this.types = Collections.unmodifiableSet(
-                    new HashSet<>(Arrays.asList(((String) module.getConfiguration().get(CFG_EVENT_TYPES)).split(","))));
+            this.types = Set.of(((String) module.getConfiguration().get(CFG_EVENT_TYPES)).split(","));
         } else {
-            this.types = Collections.emptySet();
+            this.types = Set.of();
         }
         this.bundleContext = bundleContext;
         Dictionary<String, Object> properties = new Hashtable<>();
