@@ -26,9 +26,8 @@ import java.io.InputStream;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.Response;
@@ -102,7 +101,7 @@ public class ItemResourceOSGiTest extends JavaOSGiTest {
         item3 = new DimmerItem(ITEM_NAME3);
         item4 = new StringItem(ITEM_NAME4);
 
-        when(itemProvider.getAll()).thenReturn(Arrays.asList(item1, item2, item3, item4));
+        when(itemProvider.getAll()).thenReturn(List.of(item1, item2, item3, item4));
         registerService(itemProvider);
 
         UriBuilder uriBuilder = mock(UriBuilder.class);
@@ -203,7 +202,7 @@ public class ItemResourceOSGiTest extends JavaOSGiTest {
         assertThat(response.getStatus(), is(Status.NOT_FOUND.getStatusCode()));
 
         unregisterService(itemProvider);
-        when(itemProvider.getAll()).thenReturn(Collections.singletonList(new SwitchItem("UnmanagedItem")));
+        when(itemProvider.getAll()).thenReturn(List.of(new SwitchItem("UnmanagedItem")));
         registerService(itemProvider);
 
         response = itemResource.addTag("UnmanagedItem", "MyTag");
@@ -325,8 +324,8 @@ public class ItemResourceOSGiTest extends JavaOSGiTest {
     @Test
     public void testRemoveMetadataUnmanagedMetadata() {
         MetadataProvider provider = mock(MetadataProvider.class);
-        when(provider.getAll()).thenReturn(
-                Collections.singleton(new Metadata(new MetadataKey("namespace", ITEM_NAME1), "some value", null)));
+        when(provider.getAll())
+                .thenReturn(Set.of(new Metadata(new MetadataKey("namespace", ITEM_NAME1), "some value", null)));
         registerService(provider);
 
         Response response = itemResource.removeMetadata(ITEM_NAME1, "namespace");
